News update for Map-Gen release.

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,14 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus top">
+            <h3>Map-Gen is now available</h3>
+            <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
+        </div>
+        </a>
+        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <div class="biggus">
             <h3>1.5x XP for halls is on!</h3>
             <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
         </div>
@@ -61,10 +67,6 @@
         <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
-        </div>
-        <div class="biggus">
-            <h3></h3>
-            <p></p>
         </div>
         <div class="biggus">
             <h3></h3>
@@ -108,8 +110,14 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <a  href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus top">
+            <h3>Map-Gen is now available</h3>
+            <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
+        </div>
+        </a>
+        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <div class="biggus">
             <h3>1.5x XP for halls is on!</h3>
             <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
         </div>
@@ -127,11 +135,7 @@
         <div class="biggus">
                 <h3></h3>
                 <p></p>
-            </div>
-            <div class="biggus">
-                <h3></h3>
-                <p></p>
-            </div>
+        </div>
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
