--- a/mapGen/mapgen.html
+++ b/mapGen/mapgen.html
@@ -165,7 +165,7 @@
         </main>
     </div>
     <script type="text/javascript" src="../js/particles.min.js"></script>
-    <script type="text/javascript" src="../js/custom.js"></script>
+    <script type="text/javascript" src="custom.js"></script>
 
 </body>
 </html>
