--- a/public/index.html
+++ b/public/index.html
@@ -46,18 +46,18 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <a href="https://discord.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
         <div class="biggus top">
+            <h3>TRL apps are open</h3>
+            <p>Message any HeadRaidLeader, Officer or Moderator to get a vericode!</p>
+        </div>
+        </a>
+        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <div class="biggus">
             <h3>Map-Gen is now available</h3>
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
         </a>
-        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
-        <div class="biggus">
-            <h3>1.5x XP for halls is on!</h3>
-            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
-        </div>
-         </a>
         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
         <div class="biggus"> 
             <h3>Seasonal section is out now!</h3>
@@ -110,18 +110,18 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <a href="https://discord.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
         <div class="biggus top">
+            <h3>TRL apps are open</h3>
+            <p>Message any HeadRaidLeader, Officer or Moderator to get a vericode!</p>
+        </div>
+        </a>
+        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <div class="biggus">
             <h3>Map-Gen is now available</h3>
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
         </a>
-        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
-        <div class="biggus">
-            <h3>1.5x XP for halls is on!</h3>
-            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
-        </div>
-         </a>
          <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
          <div class="biggus"> 
             <h3>Seasonal section is out now!</h3>
