links directed to discord app not site

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="https://discord.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
         <div class="biggus top">
             <h3>TRL apps are open</h3>
             <p>Message any HeadRaidLeader, Officer or Moderator to get a vericode!</p>
@@ -93,7 +93,7 @@
     <div class="something">
         <p id="something">Got a question or some feedback perhaps?</p>
         <p id="something-two">Send it to our</p>
-        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
+        <a href="discord://discordapp.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
     </div>
 </main>
 <div class="scaler">
@@ -110,7 +110,7 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <a href="https://discord.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
         <div class="biggus top">
             <h3>TRL apps are open</h3>
             <p>Message any HeadRaidLeader, Officer or Moderator to get a vericode!</p>
@@ -175,7 +175,7 @@
     <div class="something">
         <p id="something">Got a question or some feedback perhaps?</p>
         <p id="something-two">Send it to our</p>
-        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
+        <a href="discord://discordapp.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
     </div>
 </div>
 
