--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@
     <div class="something">
         <p id="something">Got a question or some feedback perhaps?</p>
         <p id="something-two">Send it to our</p>
-        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
+        <a href="discord://discordapp.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
     </div>
 </div>
 
