--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus top">
-            <h3>TRL apps are open</h3>
-            <p>Message any HeadRaidLeader, Officer or Moderator to get a vericode!</p>
+            <h3>Accursed has emerged</h3>
+            <p>A new role and section for elite shatters players out in the open now.</p>
         </div>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
@@ -110,10 +110,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1051861999757307954" target="_blank">
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus top">
-            <h3>TRL apps are open</h3>
-            <p>Message any HeadRaidLeader, Officer or Moderator to get a vericode!</p>
+            <h3>Accursed has emerged</h3>
+            <p>A new role and section for elite shatters players out in the open now.</p>
         </div>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
