Update for news.

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,12 @@
             <h3>Accursed has emerged</h3>
             <p>A new role and section for elite shatters players out in the open now.</p>
         </div>
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1056364901616070657" target="_blank">
+            <div class="biggus">
+                <h3>Exalt Leader apps are open.</h3>
+                <p>Last wave of the year, worth a shot.</p>
+        </div>
+        </a>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
@@ -67,10 +73,6 @@
         <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
-        </div>
-        <div class="biggus">
-            <h3></h3>
-            <p></p>
         </div>
     </div>
     <div class="servers">
@@ -115,6 +117,12 @@
             <h3>Accursed has emerged</h3>
             <p>A new role and section for elite shatters players out in the open now.</p>
         </div>
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1056364901616070657" target="_blank">
+            <div class="biggus">
+                <h3>Exalt Leader apps are open.</h3>
+                <p>Last wave of the year, worth a shot.</p>
+        </div>
+        </a>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
@@ -131,10 +139,6 @@
         <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
-        </div>
-        <div class="biggus">
-                <h3></h3>
-                <p></p>
         </div>
     </div>
     <div class="servers D">
