--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,6 @@
             <h3>Accursed has emerged</h3>
             <p>A new role and section for elite shatters players out in the open now.</p>
         </div>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1056364901616070657" target="_blank">
-            <div class="biggus">
-                <h3>Exalt Leader apps are open.</h3>
-                <p>Last wave of the year, worth a shot.</p>
-        </div>
-        </a>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
@@ -74,6 +68,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
+        <div class="biggus"></div>
     </div>
     <div class="servers">
         <h1 class="head-title">Our servers</h1>
@@ -111,18 +106,12 @@
         <div id="srun"></div>
     </div>
     <div class="news" id="news">
-        <h1 class="head-title">News</h1>
+        <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus top">
             <h3>Accursed has emerged</h3>
             <p>A new role and section for elite shatters players out in the open now.</p>
         </div>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1056364901616070657" target="_blank">
-            <div class="biggus">
-                <h3>Exalt Leader apps are open.</h3>
-                <p>Last wave of the year, worth a shot.</p>
-        </div>
-        </a>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
@@ -130,16 +119,17 @@
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
         </a>
-         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
-         <div class="biggus"> 
+        <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+        <div class="biggus"> 
             <h3>Seasonal section is out now!</h3>
-            <p>Have a better seasonal char experience while playing with others!</p>
-         </div>
+            <p>Have a better seasonal char experience while playing with others.</p>
+        </div>
         </a>
         <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
+        <div class="biggus"></div>
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
