--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
         <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus top">
-            <h3>Accursed has emerged</h3>
-            <p>A new role and section for elite shatters players out in the open now.</p>
+            <h3>Accursed has vaulted</h3>
+            <p>Accursed will stick around, but it will only be around during shatters events!</p>
         </div>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
@@ -109,8 +109,8 @@
         <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus top">
-            <h3>Accursed has emerged</h3>
-            <p>A new role and section for elite shatters players out in the open now.</p>
+            <h3>Accursed has vaulted</h3>
+            <p>Accursed will stick around, but it will only be around during shatters events!</p>
         </div>
         </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
