--- a/index.html
+++ b/index.html
@@ -46,8 +46,20 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1068708265606779030" target="_blank">
         <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>Message any HRL, Officer or Moderator to hand you a veri code and start filling your app.</p>
+        </div>
+        </a>
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
+        <div class="biggus">
+            <h3>Accursed has vaulted</h3>
+            <p>Accursed will stick around, but it will only be around during shatters events!</p>
+        </div>
+        </a>
+        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <div class="biggus">
             <h3>Map-Gen is now available</h3>
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
@@ -62,14 +74,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
-        <div class="biggus">
-            <h3></h3>
-            <p></p>
-        </div>
-        <div class="biggus">
-            <h3></h3>
-            <p></p>
-        </div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers">
         <h1 class="head-title">Our servers</h1>
@@ -107,31 +112,36 @@
         <div id="srun"></div>
     </div>
     <div class="news" id="news">
-        <h1 class="head-title">News</h1>
-        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <h1 class="head-title" id="bigNews">News</h1>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1068708265606779030" target="_blank">
         <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>Message any HRL, Officer or Moderator to hand you a veri code and start filling your app.</p>
+        </div>
+        </a>
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
+        <div class="biggus">
+            <h3>Accursed has vaulted</h3>
+            <p>Accursed will stick around, but it will only be around during shatters events!</p>
+        </div>
+        </a>
+        <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
+        <div class="biggus">
             <h3>Map-Gen is now available</h3>
             <p>A copy of Husky/Nacnudd's map-generating program for learning map reading.</p>
         </div>
         </a>
-         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
-         <div class="biggus"> 
+        <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+        <div class="biggus"> 
             <h3>Seasonal section is out now!</h3>
-            <p>Have a better seasonal char experience while playing with others!</p>
-         </div>
+            <p>Have a better seasonal char experience while playing with others.</p>
+        </div>
         </a>
         <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
-        <div class="biggus">
-                <h3></h3>
-                <p></p>
-        </div>
-        <div class="biggus">
-            <h3></h3>
-            <p></p>
-        </div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
