--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,14 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1068708265606779030" target="_blank">
         <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>Message any HRL, Officer or Moderator to hand you a veri code and start filling your app.</p>
+        </div>
+        </a>
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
+        <div class="biggus">
             <h3>Accursed has vaulted</h3>
             <p>Accursed will stick around, but it will only be around during shatters events!</p>
         </div>
@@ -68,7 +74,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
-        <div class="biggus"></div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers">
         <h1 class="head-title">Our servers</h1>
@@ -107,8 +113,14 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1068708265606779030" target="_blank">
         <div class="biggus top">
+            <h3>TRL applications are open!</h3>
+            <p>Message any HRL, Officer or Moderator to hand you a veri code and start filling your app.</p>
+        </div>
+        </a>
+        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
+        <div class="biggus">
             <h3>Accursed has vaulted</h3>
             <p>Accursed will stick around, but it will only be around during shatters events!</p>
         </div>
@@ -129,7 +141,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
-        <div class="biggus"></div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
