--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,16 @@
         <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1068708265606779030" target="_blank">
         <div class="biggus top">
-            <h3>TRL applications are open!</h3>
-            <p>Message any HRL, Officer or Moderator to hand you a veri code and start filling your app.</p>
+            <h3>Security applications are open!</h3>
+            <p>No veri codes are needed! just fill out the application and hope for the best!</p>
         </div>
         </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
+            <div class="biggus">
+                <h3>Banner contest winner have been chosen</h3>
+                <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
+            </div>
+            </a>
         <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus">
             <h3>Accursed has vaulted</h3>
@@ -70,10 +76,10 @@
             <p>Have a better seasonal char experience while playing with others.</p>
         </div>
         </a>
-        <div class="biggus">
+        <!-- <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
-        </div>
+        </div> -->
         <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers">
@@ -115,10 +121,16 @@
         <h1 class="head-title" id="bigNews">News</h1>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1068708265606779030" target="_blank">
         <div class="biggus top">
-            <h3>TRL applications are open!</h3>
-            <p>Message any HRL, Officer or Moderator to hand you a veri code and start filling your app.</p>
+            <h3>Security applications are open!</h3>
+            <p>No veri codes are needed! just fill out the application and hope for the best!</p>
         </div>
         </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
+            <div class="biggus">
+                <h3>Banner contest winner have been chosen</h3>
+                <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
+            </div>
+            </a>
         <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
         <div class="biggus">
             <h3>Accursed has vaulted</h3>
@@ -137,10 +149,10 @@
             <p>Have a better seasonal char experience while playing with others.</p>
         </div>
         </a>
-        <div class="biggus">
+        <!-- <div class="biggus">
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
-        </div>
+        </div> -->
         <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers D">
