--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         <div id="run"></div>
     </div>
     <div class="news" id="news">
-        <!-- <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1076929358171746364" target="_blank">
+        <h1 class="head-title" id="bigNews">News</h1>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
         <div class="biggus top">
-            <h3>Exalt leader applications are open!</h3>
-            <p>No veri code is needed, good luck to all applicants!</p>
+            <h3>TRL applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a> -->
+        </a>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
-            <div class="biggus" id="bigNews">
+            <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
                 <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
             </div>
@@ -80,7 +80,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div> -->
-        <div class="biggus"></div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers">
         <h1 class="head-title">Our servers</h1>
@@ -118,15 +118,15 @@
         <div id="srun"></div>
     </div>
     <div class="news" id="news">
-        <!-- <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1076929358171746364" target="_blank">
+        <h1 class="head-title" id="bigNews">News</h1>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
         <div class="biggus top">
-            <h3>Exalt leader applications are open!</h3>
-            <p>No veri code is needed, good luck to all applicants!</p>
+            <h3>TRL applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a> -->
+        </a>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
-            <div class="biggus" id="bigNews">
+            <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
                 <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
             </div>
@@ -153,7 +153,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div> -->
-        <div class="biggus"></div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
