--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,18 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a>
+        </a> -->
+        <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
+            <div class="biggus top">
+                <h3>Easter and moonlight village is out!</h3>
+                <p>You can check the Calander by clicking here.</p>
+            </div>
+            </a>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
             <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
@@ -119,12 +125,18 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a>
+        </a> -->
+        <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
+            <div class="biggus top">
+                <h3>Easter and moonlight village is out!</h3>
+                <p>You can check the Calander by clicking here.</p>
+            </div>
+            </a>
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
             <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
