--- a/public/index.html
+++ b/public/index.html
@@ -58,18 +58,18 @@
                 <p>You can check the Calander by clicking here.</p>
             </div>
             </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1093573572372463636" target="_blank">
+            <div class="biggus">
+                <h3>Accursed has returned!</h3>
+                <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
+            </div>
+        </a>    
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
             <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
                 <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
             </div>
             </a>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
-        <div class="biggus">
-            <h3>Accursed has vaulted</h3>
-            <p>Accursed will stick around, but it will only be around during shatters events!</p>
-        </div>
-        </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
             <h3>Map-Gen is now available</h3>
@@ -137,18 +137,18 @@
                 <p>You can check the Calander by clicking here.</p>
             </div>
             </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1093573572372463636" target="_blank">
+            <div class="biggus">
+                <h3>Accursed has returned!</h3>
+                <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
+            </div>
+        </a>    
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
             <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
                 <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
             </div>
             </a>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
-        <div class="biggus">
-            <h3>Accursed has vaulted</h3>
-            <p>Accursed will stick around, but it will only be around during shatters events!</p>
-        </div>
-        </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
             <h3>Map-Gen is now available</h3>
