--- a/index.html
+++ b/index.html
@@ -46,24 +46,30 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a>
+        </a> -->
+        <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
+            <div class="biggus top">
+                <h3>Easter and moonlight village is out!</h3>
+                <p>You can check the Calander by clicking here.</p>
+            </div>
+            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1093573572372463636" target="_blank">
+            <div class="biggus">
+                <h3>Accursed has returned!</h3>
+                <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
+            </div>
+        </a>    
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
             <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
                 <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
             </div>
             </a>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
-        <div class="biggus">
-            <h3>Accursed has vaulted</h3>
-            <p>Accursed will stick around, but it will only be around during shatters events!</p>
-        </div>
-        </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
             <h3>Map-Gen is now available</h3>
@@ -119,24 +125,30 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a>
+        </a> -->
+        <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
+            <div class="biggus top">
+                <h3>Easter and moonlight village is out!</h3>
+                <p>You can check the Calander by clicking here.</p>
+            </div>
+            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1093573572372463636" target="_blank">
+            <div class="biggus">
+                <h3>Accursed has returned!</h3>
+                <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
+            </div>
+        </a>    
         <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
             <div class="biggus">
                 <h3>Banner contest winner have been chosen</h3>
                 <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
             </div>
             </a>
-        <a href="discord://discordapp.com/channels/343704644712923138/433117430588375040/1055636625935315076" target="_blank">
-        <div class="biggus">
-            <h3>Accursed has vaulted</h3>
-            <p>Accursed will stick around, but it will only be around during shatters events!</p>
-        </div>
-        </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
             <h3>Map-Gen is now available</h3>
