--- a/public/index.html
+++ b/public/index.html
@@ -64,12 +64,12 @@
                 <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
             </div>
         </a>    
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
-            <div class="biggus">
-                <h3>Banner contest winner have been chosen</h3>
-                <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
-            </div>
-            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1094331963403411476" target="_blank">
+        <div class="biggus top">
+            <h3>Exalt Leader applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+        </div>
+        </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
             <h3>Map-Gen is now available</h3>
@@ -143,12 +143,12 @@
                 <p>Accursed has made a return for the shatters events, more details can be found by clicking here.</p>
             </div>
         </a>    
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1073355263593156628" target="_blank">
-            <div class="biggus">
-                <h3>Banner contest winner have been chosen</h3>
-                <p>Click here to take a look at the wonderful banners that were made for the sake of this contest!</p>
-            </div>
-            </a>
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1094331963403411476" target="_blank">
+        <div class="biggus top">
+            <h3>Exalt Leader applications are open!</h3>
+            <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
+        </div>
+        </a>
         <a  href="https://pubhalls.com/mapGen/mapgen" target="_blank">
         <div class="biggus">
             <h3>Map-Gen is now available</h3>
