--- a/public/index.html
+++ b/public/index.html
@@ -46,12 +46,12 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1103819098120519750" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a> -->
+        </a>
         <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
             <div class="biggus top">
                 <h3>Easter and moonlight village is out!</h3>
@@ -86,7 +86,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div> -->
-        <div class="biggus"></div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers">
         <h1 class="head-title">Our servers</h1>
@@ -125,12 +125,12 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1085050924772360233" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1103819098120519750" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a> -->
+        </a>
         <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
             <div class="biggus top">
                 <h3>Easter and moonlight village is out!</h3>
@@ -165,7 +165,7 @@
             <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div> -->
-        <div class="biggus"></div>
+        <!-- <div class="biggus"></div> -->
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
