--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1103819098120519750" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
+            <div class="biggus top">
+                <h3>Server overview is now available.</h3>
+                <p>It has never been easier to look up any information on the discord server.</p>
+            </div>
+            </a>
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1103819098120519750" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a>
+        </a> -->
         <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
             <div class="biggus top">
                 <h3>Easter and moonlight village is out!</h3>
@@ -125,12 +131,18 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1103819098120519750" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
+            <div class="biggus top">
+                <h3>Server overview is now available.</h3>
+                <p>It has never been easier to look up any information on the discord server.</p>
+            </div>
+            </a>
+        <!-- <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1103819098120519750" target="_blank">
         <div class="biggus top">
             <h3>TRL applications are open!</h3>
             <p>DM any HRL, Officer or Mod to get a veri code to apply.</p>
         </div>
-        </a>
+        </a> -->
         <a href="https://cdn.discordapp.com/attachments/433117430588375040/1090290319251210330/EACa.png" target="_blank">
             <div class="biggus top">
                 <h3>Easter and moonlight village is out!</h3>
