--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1112388781128036442" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1114754748768329780" target="_blank">
             <div class="biggus top">
-                <h3>Security applications are open!</h3>
-                <p>No verfication code is needed, good luck to all applicants.</p>
+                <h3>Security applications are now closed</h3>
+                <p>If you were chosen you will be contacted within 2 weeks.</p>
             </div>
             </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
@@ -137,10 +137,10 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1112388781128036442" target="_blank">
+        <a href="discord://discord.com/channels/343704644712923138/433117430588375040/1114754748768329780" target="_blank">
             <div class="biggus top">
-                <h3>Security applications are open!</h3>
-                <p>No verfication code is needed, good luck to all applicants.</p>
+                <h3>Security applications are now closed</h3>
+                <p>If you were chosen you will be contacted within 2 weeks.</p>
             </div>
             </a>
         <a href="discord://discord.com/channels/343704644712923138/1097574070524059789/1106687337188044931" target="_blank">
